--- a/gpd-plannig-tool-frontend/src/ui/styles/global.css
+++ b/gpd-plannig-tool-frontend/src/ui/styles/global.css
@@ -1,9 +1,11 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
 }
 
-body * {
-    font-family: Roboto, sans-serif;
+body {
+  font-family: Roboto, sans-serif;
+  background-color: #f8f5ef;
 }
