tabela de datas e recursos concluida, funcionando dinamicamente

--- a/gpd-plannig-tool-frontend/src/ui/styles/global.css
+++ b/gpd-plannig-tool-frontend/src/ui/styles/global.css
@@ -9,3 +9,8 @@ body {
   font-family: Roboto, sans-serif;
   background-color: #f8f5ef;
 }
+
+.MuiTableContainer-root {
+  max-height: 60vh !important;
+  overflow-y: auto !important;
+}
